@@ -317,6 +317,31 @@ SCIP_RETCODE SCIPnlpiOracleEvalConstraintValues(
    SCIP_Real*            convals             /**< pointer to store constraint values */
    );
 
+/** interval evaluate objective function for given variable bounds */
+SCIP_EXPORT
+SCIP_RETCODE SCIPnlpiOracleEvalObjectiveInterval(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_NLPIORACLE*      oracle,             /**< pointer to NLPIORACLE data structure */
+   SCIP_Real             infinity,           /**< value for infinity */
+   const SCIP_Real*      xmin,               /**< lower bound on variable interval */
+   const SCIP_Real*      xmax,               /**< upper bound on variable interval */
+   SCIP_Real*            objmin,             /**< buffer to store lower bound of objective */
+   SCIP_Real*            objmax              /**< buffer to store upper bound of objective */
+   );
+
+/** interval evaluate one constraint function for given variable bounds */
+SCIP_EXPORT
+SCIP_RETCODE SCIPnlpiOracleEvalConstraintInterval(
+   SCIP*                 scip,               /**< SCIP data structure */
+   SCIP_NLPIORACLE*      oracle,             /**< pointer to NLPIORACLE data structure */
+   SCIP_Real             infinity,           /**< value for infinity */
+   int                   considx,            /**< index of constraint to evaluate */
+   const SCIP_Real*      xmin,               /**< lower bound on variable interval */
+   const SCIP_Real*      xmax,               /**< upper bound on variable interval */
+   SCIP_Real*            conmin,             /**< buffer to store lower bound of constraint */
+   SCIP_Real*            conmax              /**< buffer to store upper bound of constraint */
+   );
+
 /** computes the objective gradient in a given point
  *
  * @return SCIP_INVALIDDATA, if the function or its gradient could not be evaluated (domain error, etc.)
